# Floating_triangles

./: CMakeLists.txt  Makefile  a.out  extra_logic.ll  extra_logic.love  graphic  header.h  header.hpp  llvm_giver.cpp  llvm_giver.ll  logic.c  logic.h  logic.ll  main.c  picture.cpp
Love/: CMakeLists.txt  Node.cc  Node.hpp  compiler.y  driver.cc  example.love  example.love.ll  scanner.l
Love/tests/: Makefile  a1.out  a2.out  a3.out  test1_if.love  test1_if.love.ll  test2_while.love  test2_while.love.ll  test3_function.love  test3_function.love.ll
dump/: math.love.ll
